--- a/css/css.css
+++ b/css/css.css
@@ -3,7 +3,7 @@ body {
 	margin:0;
 	padding:0;
 	height:100%;
-	background-color:#FCFFF5;
+	background-color:#1b1b1b;
 	font-family: 'Ubuntu', sans-serif;
 	width:100%;
 }
@@ -34,64 +34,14 @@ a {
 	float:left;
 }
 
-/*Classes for the Header bar*/
-.topbar {
-	list-style-type:none;
-	margin:0px;
-	padding:0px;
-	background-color:#3E606F;
-	color:#FCFFF5;
-	height:90px;
-}
-
-.topbar h2 {
-	margin-left:12%;
-	padding-top:10px;
-	float:left;
-}
-
-.breadbar {
-	float:right;
+div.a {
+width: 50px;
+height:50px;
+position:absolute;
+    
 }
 
 
-.breadbar ul {
-	list-style: none;
-	text-align: center;
-	padding: 0;
-
-	margin-top: 25px;
-	
-}
-.breadbar li {
-	display:inline-block;
-	padding:10px;
-	text-align:left;
-	vertical-align:middle;
-	font-weight: bold;
-
-}
-
-/*Classes for the Slick Image Carousel*/
-.carousel {
-	
-}
-.imagecar h1 {
-	text-align: center;
-	margin-top:100px;
-}
-.imagecar p {
-	text-align: center;
-}
-.imagecar {
-
-    margin-left: 0;
-    margin-right: 0;
-	background-color:#91AA9D;
-	height:300px;
-	width:100%;
-	color:#FCFFF5;
-}
 
 /*Classes for the Contents of the page*/
 .content { 
@@ -99,43 +49,46 @@ a {
 	margin-right:12%;
 	padding-bottom:90px
 }
-.content h1 {
-	
+.content img {
+	max-width: 100vw;
+    height:auto;
+    width:auto;
+    max-height:100vh;
 }
 .leftcol {
-	width:48%;
+	width:26%;
 	text-align:left;
-	border-right:1px solid black;
-	border-style:none groove none none;
 	display: inline-block;
-	padding-right:10px;
+	float:left;
+	background-color:#1b1b1b;
+}
+
+.leftcol img {
+	width:100%;
+	text-align:center;
+	
 }
 .rightcol {
 	width:48%;
 	text-align:right;
 	display: inline-block;
-	padding-left:10px;
+	float:left;
 }
-.rightcol h1, .rightcol p{
-	text-align:left;
+.rightcol img {
+	max-width: 100vw;
+    height:auto;
+    width:auto;
+    max-height:100vh;
 }
+
 .button {
-	width:25%;
-	border-radius: 10px;
-    background-color: #D1DBBD;
+	background-color:#e78425;
+	color:#ffffff;
+	font-family: 'Arial', sans-serif, 'Apple SD Gothic Neo';
+	padding:30px;
 	text-align:center;
 }
 
-.bottombar {
-	background:#3E606F;
-	color:#FCFFF5;
+.a img {
 	width:100%;
-	height:90px;
-	position:absolute;
-	bottom:0;
-	left:0;
-}
-.bottombar h2 {
-	margin-left:12%;
-	padding-top:10px;
 }
