--- a/css/home.css
+++ b/css/home.css
@@ -28,6 +28,11 @@
     .content {
         padding: 6rem 0;
     }
+
+    .header {
+        margin-top: 18rem;
+        margin-bottom: 6rem;
+    }
 }
 
 @media(min-width: 750px) {
