--- a/css/home.css
+++ b/css/home.css
@@ -37,3 +37,49 @@
 
 @media(min-width: 750px) {
 }
+
+.projimage img {
+    width: 100%;
+    height: auto;
+}
+
+.Overlaycontainer {
+    position: relative;
+    width: 100%;
+}
+
+.Overlayimage {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.OverlayBackground {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #ffffff;
+}
+
+.Overlaycontainer:hover .OverlayBackground {
+    opacity: 0.96;
+}
+
+.Overlaytext {
+    width: 80%;
+    color: black;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
