--- a/css/home.css
+++ b/css/home.css
@@ -202,3 +202,26 @@ iframe {
 .gitbuttondiv {
     padding-left: 2rem;
 }
+
+.about {
+    padding-bottom: 4rem;
+}
+
+    .about div p {
+        text-align: left;
+        vertical-align: middle;
+    }
+
+    .about div img {
+        padding-left: 2rem;
+        padding-right: 2rem;
+        width: -webkit-calc(100% - 4rem);
+        width: -moz-calc(100% - 4rem);
+        width: calc(100% - 4rem);
+        position: relative;
+        height: auto;
+    }
+
+    .about .four div {
+        margin: 0;
+    }
